# pageshelf

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  flake.nix
.forgejo/workflows/: cargo.yml  docker.yml
.github/workflows/: cargo.yml  docker.yml  docker.yml.disabled
benches/: memory.rs  web_access.rs
branding/: README.md
configs/: test_config.toml
src/: asset.rs  conf.rs  lib.rs  main.rs  page.rs  resolver.rs  storage.rs  util.rs
src/backend/: mod.rs
src/backend/forgejo/: asset_direct.rs  mod.rs  scan.rs
src/backend/layers/: redis.rs
src/backend/memory/: asset.rs  mod.rs
src/cache/: memory.rs  mod.rs
src/core/: asset.rs  cache.rs  mod.rs  page_factory.rs  pages.rs  resolver.rs  util.rs
src/frontend/: mod.rs
src/frontend/routes/: mod.rs  pages.rs  server.rs
src/frontend/templates/: error.jinja  header.jinja  index.jinja  mod.rs
src/provider/: mod.rs  scanner.rs
src/provider/cache/: mod.rs  redis.rs
src/provider/forgejo/: asset_direct.rs  mod.rs  scanner.rs
src/provider/layers/: cache.rs
src/provider/memory/: asset.rs  mod.rs
src/providers/: forgejo.rs  memory.rs  mod.rs
src/providers/assets/: forgejo_direct.rs  memory.rs  mod.rs
src/providers/layers/: redis.rs
src/routes/: mod.rs  pages.rs  server.rs
src/storage/: backend_filesystem.rs  forgejo_direct.rs  gitea_filesystem.rs  memory.rs  mod.rs
src/templates/: 404.jinja  footer.jinja  header.jinja  index.jinja  mod.rs  styles.css
test_dir/a/exampleDir/: index.html  test.html
tests/: web_404.rs  web_domain.rs  web_subdomain.rs  web_test.rs
