[package]
name = "pageshelf"
description = "A free and open source Pages server."
authors = ["Mrrp (https://git.smgames.club/mrrp, https://codeberg.org/mrrp)"]
version = "0.1.0"
license = "MIT License"
edition = "2024"
publish = false

[dependencies]
forgejo-api = "0.7"
actix-web = "4.5.45"
clap = { version = "4.5.45", features = ["cargo"] }
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
url = "2.5.4"
minijinja = "2.11"
serde = "1"
config = "0.15"
toml = "0.9"
walkdir = "2.5"
mime_guess = "2"

[dev-dependencies]
tokio = { version = "1.47", features = ["macros"] }
env_logger = "0.11"

[profile.release]
opt-level = 3
overflow-checks = true
debug = 0
lto = true