[package]
name = "pageshelf"
description = "A free and open source Pages server, written in Rust"
authors = ["Mrrp (https://git.smgames.club/mrrp, https://codeberg.org/mrrp)"]
version = "0.1.0"
license = "MIT License"
edition = "2024"
publish = false

[dependencies]
forgejo-api = { version = "0.7", optional = true }
actix-web = { version = "4.5.45", default-features = false, features = [
    "macros",
    "compress-zstd",
    "compress-gzip",
] }
clap = { version = "4.5.45", features = ["cargo"] }
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
url = { version = "2.5.4", features = ["serde"] }
minijinja = { version = "2.11", default-features = false, features = [
    "multi_template",
] }
serde = "1"
config = "0.15"
toml = "0.9"
mime_guess = "2"
redis = { version = "0.32", features = ["aio", "tokio-comp"], optional = true }

[dev-dependencies]
tokio = { version = "1.47", features = ["macros"] }
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports", "async_std"] }
rand = "0.9"

[features]
default = ["redis", "forgejo"]
forgejo = ["dep:forgejo-api"]
redis = ["dep:redis"]

[[bench]]
name = "web_access"
harness = false

[[bench]]
name = "memory"
harness = false

[profile.release]
opt-level = 3
overflow-checks = true
debug = false
lto = true
strip = true
panic = 'abort'
